--- a/csgoform.html
+++ b/csgoform.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page1</title>
+    <title>Form Page</title>
 </head>
 <body>
+    <img src="pic.png" alt="DJNASH31-twitch">
     <form>
     <legend><span class="number">1</span> Your Basic Info</legend>
     <label for="name">Name:</label>
