--- a/home.html
+++ b/home.html
@@ -7,5 +7,20 @@
 </head>
 <body>
     <h1>Welcome to the website</h1>
+    <img src="pic.png" alt="DJNASH31-twitch">
+    <nav>
+        <h2>Main site navigation</h2>
+        <ul>
+          <li>
+            <a href="/home.html">Home</a>
+          </li>
+          <li>
+            <a href="/csgoform.html">page</a>
+          </li>
+          <li>
+              <a href="/csgopro.html">Table page</a>
+          </li>
+        </ul>
+      </nav>
 </body>
 </html>
